[package]
authors = ["Scott Godwin <sgodwincs@gmail.com>"]
categories = ["data-structures"]
description = "Semi-doubly linked list implemented using a vector"
edition = "2018"
homepage = "https://github.com/sgodwincs/dlv-list-rs"
license = "MIT"
name = "dlv-list"
readme = "README.md"
repository = "https://github.com/sgodwincs/dlv-list-rs"
version = "0.2.3"

[dependencies]
rand = "0.8.3"
