[package]
name = "dlv-list"
version = "0.3.0"
authors = ["Scott Godwin <sgodwincs@gmail.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/sgodwincs/dlv-list-rs"
description = "Semi-doubly linked list implemented using a vector"
readme = "README.md"
categories = ["data-structures"]
keywords = ["vector", "linked", "list"]

[dependencies]
serde = { version = "1", optional = true }

[dev-dependencies]
coverage-helper = "0.1.0"
serde_test = "1.0.144"
